# wisprclone

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  Corrections.tsx  History.tsx  Overlay.tsx  Vocabulary.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: audio.rs  cleanup.rs  config.rs  context.rs  corrections.rs  history.rs  hotkey.rs  inject.rs  lib.rs  normalize.rs  transcribe.rs  vocabulary.rs  volume.rs
